# controllable-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  launch.py  my_agent.py  pyproject.toml  start.bat  web_server.py  上下文优化方案.md  修改记录.md  可视化.md  多智能体设计.md  多智能实现记录.md  我的记忆改进.md  改进总结.md  更新总结.md  架构总结.md  记忆系统更新记录.md  记忆系统设计实现.md  问题记录.md  项目分析报告.md
.agent-base/agents/: a.yaml  b.yaml  coder.yaml  coordinator.yaml  explorer.yaml  memorizer.yaml  planner.yaml  reviewer.yaml  tester.yaml
.github/workflows/: ci.yml
agent/: __init__.py  autonomous_memory.py  cache_break.py  capability.py  claudemd.py  compaction.py  config_validator.py  context_window.py  crystallizer.py  discovery.py  error_policy.py  hook.py  hot_loader.py  inspector.py  logger.py  loop.py  marketplace.py  meta_agent.py  multi_model.py  plugin.py  prompt.py  role_prompts.py  runtime.py  self_modify.py  skill.py  step_outcome.py  tool_registry.py  web.py
agent/mcp/: __init__.py  client.py
agent/memory/: __init__.py  agent_store_factory.py  backend.py  dedup.py  domain_index.py  extractor.py  fact_store.py  index.py  shared_space.py  store.py  task_detector.py
ai/: __init__.py  provider.py  types.py
app/: __init__.py  cli.py  server.py
app/config/: agent.yaml  agent.yaml.example  loader.py
app/memory_fs/: fs_backend.py
app/providers/: __init__.py  anthropic.py  openai_compat.py
app/tools/: __init__.py  agent_message.py  bash.py  cross_agent_read.py  edit.py  (+11 more)
docs/: 部署指南.md  需求4.md  需求4技术2.md
frontend/: index.html
tests/: conftest.py
(+50 files in other folders)
